--- a/app/src/main/res/layout/question_list_item.xml
+++ b/app/src/main/res/layout/question_list_item.xml
@@ -22,7 +22,7 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Question_ID"
+            android:text="ID."
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Category"
-            app:layout_constraintEnd_toEndOf="@+id/textView6"
+            android:text="Dist. "
+            app:layout_constraintStart_toStartOf="@+id/textView6"
             app:layout_constraintTop_toBottomOf="@+id/tvItemId" />
 
         <TextView
@@ -41,14 +41,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Title"
-            app:layout_constraintEnd_toEndOf="@+id/textView10"
+            app:layout_constraintStart_toStartOf="@+id/textView10"
             app:layout_constraintTop_toBottomOf="@+id/tvItemCategory" />
 
         <TextView
             android:id="@+id/tvItemId"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="8dp"
             android:text="EF4SD34-5"
             app:layout_constraintEnd_toStartOf="@+id/btnItemEdit"
@@ -60,8 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Created By"
-            app:layout_constraintEnd_toEndOf="@+id/textView11"
+            android:text="By"
+            app:layout_constraintStart_toStartOf="@+id/textView11"
             app:layout_constraintTop_toBottomOf="@+id/tvItemTitle" />
 
         <TextView
@@ -99,8 +99,9 @@
             style="@style/Widget.Material3.Button.IconButton.Outlined"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             app:icon="@drawable/pen_to_square_solid"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnCloudUp"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
@@ -108,8 +109,30 @@
             style="@style/Widget.Material3.Button.IconButton.Outlined"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             app:icon="@drawable/trash_solid"
-            app:layout_constraintEnd_toEndOf="@+id/btnItemEdit"
+            app:layout_constraintEnd_toStartOf="@+id/btnShareAsQR"
             app:layout_constraintTop_toBottomOf="@+id/btnItemEdit" />
+
+        <Button
+            android:id="@+id/btnShareAsQR"
+            style="@style/Widget.Material3.Button.IconButton.Outlined"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            app:icon="@drawable/square_share_nodes_solid"
+            app:layout_constraintEnd_toEndOf="@+id/btnCloudUp"
+            app:layout_constraintStart_toEndOf="@+id/btnItemEdit"
+            app:layout_constraintTop_toBottomOf="@+id/btnItemEdit" />
+
+        <Button
+            android:id="@+id/btnCloudUp"
+            style="@style/Widget.Material3.Button.IconButton.Outlined"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            app:icon="@drawable/cloud_arrow_up_solid"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
